--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,3 +87,18 @@ input[type="search"] {
 .flex-form a:hover {
     background: rgba(27, 20, 100,1);
 }
+
+.button-hubungi-kami {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px
+}
