--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,92 +1,97 @@
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
+  line-height: 1.5;
+  font-family: "Open Sans";
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .container {
-    width: 1170px;
-    padding: 0 15px;
-    margin: 0 auto;
-  }
+  width: 1170px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
 
 header {
-    height: 120px;
-    width: 100%;
-    background: url("img-sea.jpg");
-    background-size: cover;
+  height: 120px;
+  width: 100%;
+  background-image: url(img/img-sea.jpg);
+  background-size: cover;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
 }
 
 .header-left {
-    float: left;
-    height: 50px;
-    padding: 0;
-    position: fixed;
-    z-index: 10;
+  float: left;
+  height: 50px;
+  padding: 0;
 }
 
 .header-left a {
-    float: left;
-    font-size: 15px;
-    margin-right: 40px;
-    color: rgba(27, 20, 100,1.0);
-    letter-spacing: 0.6px;
-    font-weight: bold;
+  float: left;
+  font-size: 15px;
+  margin-right: 40px;
+  color: rgba(27, 20, 100, 1);
+  letter-spacing: 0.6px;
+  font-weight: bold;
 }
 
 .header-left a:hover {
-    color: rgba(223, 249, 251,1.0);
+  color: rgba(223, 249, 251, 1);
 }
 
 .logo {
-    font-size: 25px;
-    color: #fff;
-    letter-spacing: 13px;
+  font-size: 25px;
+  color: #fff;
+  letter-spacing: 13px;
 }
 
 .header-right {
-    float: right;
-    padding: 20px 0px;
-    line-height: 100%;
-    margin-top: 20px;
+  float: right;
+  padding: 20px 0px;
+  line-height: 100%;
+  margin-top: 20px;
 }
 
-
 .flex-form {
-    display: flex;
-    z-index: 10;
-    position: relative;
-    width: 500px;
+  display: flex;
+  z-index: 10;
+  position: relative;
+  width: 500px;
 }
 
 .flex-form > * {
-    border: 0;
-    padding: 0 0 0 10px;
-    background: rgba(236, 240, 241,0.8);
-    line-height: 35px;
-    border-radius: 0;
+  border: 0;
+  padding: 0 0 0 10px;
+  background: rgba(236, 240, 241, 0.8);
+  line-height: 35px;
+  border-radius: 0;
 }
 
 input[type="search"] {
-    flex-basis: 250px;
+  flex-basis: 250px;
 }
 
 .flex-form a {
-    background: rgba(27, 20, 100,0.6);
-    color: #fff;
-    padding: 0 20px;
-    cursor: pointer;
-    font-weight: 400;
-    text-transform: lowercase;
-    transition: all .2s;
-    font-family: 'Barlow Condensed',sans-serif;
+  background: rgba(27, 20, 100, 0.6);
+  color: #fff;
+  padding: 0 20px;
+  cursor: pointer;
+  font-weight: 400;
+  text-transform: lowercase;
+  transition: all 0.2s;
+  font-family: "Barlow Condensed", sans-serif;
 }
 
 .flex-form a:hover {
-    background: rgba(27, 20, 100,1);
+  background: rgba(27, 20, 100, 1);
 }
+
 
 .button-hubungi-kami {
   background-color: #4CAF50; /* Green */
